<resources>
    <string name="app_name">Musical App</string>
    <string name="hi_life">High Life Music</string>
    <string name="reggae">Reggae Music</string>
    <string name="gospel">Gospel Music</string>
    <string name="playing">Now Playing</string>
    <string name="artist">Artist:</string>
    <string name="song">Song:</string>
    <string name="album">Album:</string>
    <string name="music_image">Music Image</string>
    <string name="rasKuuku">Ras Kuuku FT Kofi Kinaata</string>
    <string name="wo">Wo</string>
    <string name="kunkunkununku">Kunkunkununku</string>
    <string name="Stonebwoy_ft">Stonebwoy FT Sarkodie</string>
    <string name="Baafira">Baafira</string>
    <string name="samini">Samini</string>
    <string name="rainbow">Rainbow</string>
    <string name="epistles">Epistles Of Mama</string>
    <string name="untamed">Untamed</string>
    <string name="wicked">Wickedest Sound</string>
    <string name="rocky">Rocky Dawuni</string>
    <string name="beat">Beats Of Zion</string>
    <string name="stonebwoy">Stonebwoy</string>
    <string name="ghetto">Ghetto Love</string>
    <string name="grade">Grade #1</string>
    <string name="inna">Inna Dancehall</string>
    <string name="shatta">Shatta Wale</string>
    <string name="akesse">Akesse Brempong</string>
    <string name="alright">Alright</string>
    <string name="songs_in">Songs In The Night</string>
    <string name="today">Today Too</string>
    <string name="addi">Addi Self</string>
    <string name="play">play</string>
    <string name="back">back</string>
    <string name="pause">pause</string>
    <string name="forward">forward</string>
    <string name="ohemaa">Ohemaa Mercy</string>
    <string name="aseda">Aseda</string>
    <string name="wobeye">Wo Beye Kese</string>
    <string name="joe">Joe Mettle FT Luigi Maclean</string>
    <string name="bonoo">Bo Noo Ni</string>
    <string name="god_of">God Of Miracles</string>
    <string name="bernice">Bernice Ofei</string>
    <string name="life_is_short">Life Is Short</string>
    <string name="life">Life</string>
    <string name="tagoe">Tagoe Sisters</string>
    <string name="anka">Anka Matete</string>
    <string name="jesus">Jesus</string>
    <string name="stella">Stella Aba Seal</string>
    <string name="afe">Afe Ato Me</string>
    <string name="worship"><![CDATA[Worship & Praise]]></string>
    <string name="preachers">Preachers</string>
    <string name="no_juju">No Juju</string>
    <string name="fearless">The Fearless Project</string>
    <string name="comfort">Comfort</string>
    <string name="dom_hene">Dom Hene</string>
    <string name="ghana_gospel">Ghana Gospel Classics Vol 1</string>
    <string name="victor">Victor Umaifo</string>
    <string name="guitor_boy">Guitor Boy</string>
    <string name="greatest_hits">Greatest Hits Vol 1</string>
    <string name="et_mensah">E. T. Mensah</string>
    <string name="ghana_freedom">Ghana Freedom</string>
    <string name="day_by_day">Day by Day</string>
    <string name="prince">Prince Nico Mbarga</string>
    <string name="sweet_mother">Sweet Mother</string>
    <string name="dr_k">Dr. K. Gyasi</string>
    <string name="yede">Yede Aba</string>
    <string name="yako">Yako Aba</string>
    <string name="bisa">Bisa Kdei</string>
    <string name="mensa">Mensa</string>
    <string name="break_through">Break Through</string>
    <string name="yamoah">Yamoah</string>
    <string name="onantefo">Onantefo</string>
    <string name="saman">Saman Me</string>
    <string name="pat">Pat Thomas</string>
    <string name="sika">Sika Ye Mogya</string>
    <string name="money">Money Is Blood</string>
    <string name="george">George Darko</string>
    <string name="akoo">Akoo te Brofo</string>
    <string name="odo_color">Odo Color</string>
    <string name="lee">Lee Dodou</string>
    <string name="akwankwa">Akwankwa</string>
    <string name="feel_so_good">Feel So Good</string>
    <string name="amakye_dede">Amakye Dede</string>
    <string name="odo_da">Odo Da Baabi</string>
    <string name="iron_boy">Iron Boy</string>
</resources>
