<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".PlayerActivity">

    <ImageView
        android:id="@+id/imagePlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/music_image"
        android:src="@drawable/ironboy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/artistSongTextViews"
                android:text="@string/artist"
                android:textStyle="bold" />

            <TextView
                style="@style/artistSongTextViews"
                android:text="@string/song" />

            <TextView
                style="@style/albumTextViews"
                android:text="@string/album" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/artistPlay"
                style="@style/artistSongTextViews"
                android:textStyle="bold"
                tools:text="@string/artist" />

            <TextView
                android:id="@+id/songPlay"
                style="@style/artistSongTextViews"
                tools:text="@string/song" />

            <TextView
                android:id="@+id/albumPlay"
                style="@style/albumTextViews"
                tools:text="@string/album" />

        </LinearLayout>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            app:srcCompat="@android:drawable/ic_media_rew" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            app:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/forward"
            app:srcCompat="@android:drawable/ic_media_ff" />

    </LinearLayout>

</LinearLayout>