<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/highLife"
        style="@style/mTextView"
        android:background="@color/beige_light"
        android:text="@string/hi_life" />

    <TextView
        android:id="@+id/reggae"
        style="@style/mTextView"
        android:background="@color/brown_yellow"
        android:text="@string/reggae" />

    <TextView
        android:id="@+id/gospel"
        style="@style/mTextView"
        android:background="@color/beige"
        android:text="@string/gospel" />

</LinearLayout>